istio/manifests/01-kiali-sup-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kiali-support
  namespace: istio-system
spec:
  gatewayClassName: istio
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: kiali-gw-tls
            namespace: istio-system
      allowedRoutes:
        namespaces:
          from: All
