istio/manifests/02-prometheus-httpr.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
  - name: kiali-support
    sectionName: https
    namespace: istio-system
  hostnames:
  - prom.kryukov.local
  rules:
  - backendRefs:
    - name: prometheus-server
      port: 80
