istio/manifests/04-kiali-httpr.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali
  namespace: istio-system
spec:
  parentRefs:
  - name: kiali-support
    sectionName: https
    namespace: istio-system
  hostnames:
  - kiali.kryukov.local
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: /
    backendRefs:
    - name: kiali
      port: 20001
